--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;800;900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 * {
@@ -8,6 +8,7 @@
     /*border: 1px solid red;*/
     /*background-color: rgba(91, 147, 91, 0.1);*/
     font-family: 'Poppins', sans-serif;
+    background: transparent;
 }
 
 html {
@@ -18,6 +19,13 @@ html {
 body {
     width: 100%;
     height: 100%;
+    background: linear-gradient(180deg, #FFFFFF 2.83%, #EFF9FF 12.24%, #EFF9FF 12.25%, #F0F9FF 16.29%, #F1F9FF 22.37%, #F2F8FF 26.91%, #F2F8FF 26.92%, #F3F8FF 31.98%, #F5F8FF 43.62%, #F5F8FF 46.15%, #F7F7FF 53.74%, #F8F7FE 62.35%, #F8F7FE 62.36%, #FAF7FE 72.97%, #FAF7FE 72.97%, #FCF6FE 84.11%, #FDF6FE 86.64%, #FDF6FE 91.7%, #FFF6FE 100%);
+    .help-icon{
+        opacity: 20%;
+        &:hover{
+            opacity: 50%;
+        }
+    }
 }
 
 .main-frame-wrapper {
@@ -93,9 +101,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     & > div {
         margin: 10px;
+    }
+    .title{
+        font-size: 1.5rem;
+        font-weight: 600 ;
+        background: linear-gradient(270deg, #02B3F1 0%, #D37DFF 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        user-select: none;
     }
 }
 
@@ -123,14 +138,25 @@ body {
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
         padding: 10px;
+        /*border: 1px solid ;*/
+
+        & span{
+            /*background-color: rgba(240, 240, 240, 0.75);*/
+            color: #ACACAC;
+            padding: 10px;
+            border-radius: 8px;
+        }
         & input {
             border: none;
             outline: none;
             border-bottom: 1px solid black;
-            width: 40%;
-            text-align: center;
+            width: 50%;
+            /*text-align: center;*/
+        }
+        & select{
+            display: none;
         }
     }
 }
@@ -166,8 +192,9 @@ body {
         overflow: scroll;
         display: flex;
         flex-wrap: wrap;
+        /*flex-direction: column;*/
         justify-content: flex-start;
-
+        cursor: pointer;
         .keyShortcut{
             width: 11px;
             aspect-ratio: 1/1;
@@ -179,15 +206,42 @@ body {
             bottom: 0;
             right: 5px;
         }
-        > * {
+         > *{
+             background-color: rgba(149, 157, 165, 0.05);
+             border-radius: 5px;
+        }
+        > *:hover{
+            background-color: rgba(149, 157, 165, 0.25);
+        }
+        .grid {
             flex: 0 0 calc(33.333% - 10px);
             margin: 5px;
             aspect-ratio: 2/1;
-            border: 1px solid red;
+            /*border: 1px solid red;*/
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
+        }
+        .list{
+            width: 100%;
+            /*flex-grow: 1;*/
+            /*border: 1px solid red;*/
+            padding: 10px;
+            margin-bottom: 3px;
+            overflow: hidden;
+            /*margin: 2px;*/
+            & > h6{
+                font-size: 12px;
+                font-weight: 500;
+            }
+            & > p{
+                font-size: 11px;
+                overflow: scroll;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
         }
     }
 }
