[Impl] Changed cursor

--- a/styles/main.css
+++ b/styles/main.css
@@ -187,7 +187,9 @@ body {
         justify-content: space-between;
 
     }
-
+    & span {
+        cursor: pointer;
+    }
     .frq-shortcuts {
         overflow: scroll;
         display: flex;
