--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ body {
     background: linear-gradient(180deg, #FFFFFF 2.83%, #EFF9FF 12.24%, #EFF9FF 12.25%, #F0F9FF 16.29%, #F1F9FF 22.37%, #F2F8FF 26.91%, #F2F8FF 26.92%, #F3F8FF 31.98%, #F5F8FF 43.62%, #F5F8FF 46.15%, #F7F7FF 53.74%, #F8F7FE 62.35%, #F8F7FE 62.36%, #FAF7FE 72.97%, #FAF7FE 72.97%, #FCF6FE 84.11%, #FDF6FE 86.64%, #FDF6FE 91.7%, #FFF6FE 100%);
     .help-icon{
         opacity: 20%;
+        cursor: pointer;
         &:hover{
             opacity: 50%;
         }
