--- a/styles/main.css
+++ b/styles/main.css
@@ -116,11 +116,11 @@ body {
 }
 
 .create-shortcut-wrapper {
-    height: 25%;
+    /*height: 25%;*/
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    /*justify-content: space-evenly;*/
 
     .button-fields {
         display: flex;
@@ -131,7 +131,7 @@ body {
         & button {
             padding: 10px;
             width: 100px;
-
+            margin: 0;
         }
     }
 
