[Impl] added favIcon in grid and list view

--- a/src/popup/styles/popup.css
+++ b/src/popup/styles/popup.css
@@ -192,6 +192,7 @@ body {
                 align-items: center;
                 justify-content: center;
                 position: relative;
+                gap: 0.3rem;
             }
             .list{
                 width: 100%;
