--- a/src/setting_panel/panel.css
+++ b/src/setting_panel/panel.css
@@ -1,4 +1,5 @@
-.panel-wrapper, .panel-wrapper * {
+.panel-wrapper,
+.panel-wrapper * {
     /*border: 1px solid red;*/
     /*background-color: rgba(0, 128, 0, 0.22);*/
     flex-grow: 1;
